feat: add repeat password field on user registration
